product manage for Admin successful add in project

--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -28,6 +28,7 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- all spring dependency start -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -53,6 +54,12 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<!-- all spring dependency end -->
 
 		<!-- MySQL Driver -->
 		<dependency>
@@ -106,6 +113,19 @@
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<!-- Hibernate Validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.4.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
 		</dependency>
 
 	</dependencies>
